Reset sources for azure-messaging-eventhubs to the release version 5.15.5.